fixed wording and layout issue

--- a/ontario-fgc-website/src/components/Organizations.css
+++ b/ontario-fgc-website/src/components/Organizations.css
@@ -83,6 +83,11 @@
     overflow-y: hidden;
     overflow-x: auto;
     width: 83vw;
+    gap: 3vw;
+  }
+
+  .organization-button {
+    white-space: nowrap;
   }
   
   .organizations-listings-descriptions {
